[project]
dynamic = ["version"]
name = "moflask"
description = "Re-usable flask utilities."
authors = [
  {name = "Roman Zimmermann", email="roman@more-onion.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
]
dependencies = [
  "flask>=2.1,<3",  # <3 needed by sentry-sdk<1.20
  "python-json-logger",
]

[project.optional-dependencies]
dev = [
  "black",
  "flask-jwt-extended",
  "flask-sqlalchemy",
  "isort",
  "pre-commit",
  "pylint",
  "pytest",
  "pytest-cov",
  "pytz",
  "requests-mock",
  "sentry-sdk[flask]<1.20",
]
jwt = [
  "flask-jwt-extended>=4.4.4,<5",
]

[project.entry-points.pytest11]
moflask = "moflask.pytest_plugin"

[build-system]
requires = [
  "setuptools>=45",
  "setuptools-scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["moflask"]

[tool.setuptools_scm]

[project.urls]
repository = "https://github.com/moreonion/moflask"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true

[tool.pylint.format]
max-line-length = "100"

[tool.pytest.ini_options]
addopts = "--cov=moflask --cov-report=term"
python_classes = [
  "*Test",
  "Test*",
]
